// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`address route > enhanced data 1`] = `
{
  "canonical": "http://localhost:3000/address/0xd789a607CEac2f0E14867de4EB15b15C9FFB5859",
  "description": "View the account balance, transactions, and other data for duck.eth on the Blockscout Blockchain Explorer",
  "jsonLd": undefined,
  "opengraph": {
    "description": "View the account balance, transactions, and other data for duck.eth on the Blockscout Blockchain Explorer",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout address details for duck.eth",
  },
  "robots": "index,follow",
  "title": "Blockscout address details for duck.eth",
}
`;

exports[`address route > no enhanced data 1`] = `
{
  "canonical": "http://localhost:3000/address/0xd789a607CEac2f0E14867de4EB15b15C9FFB5859",
  "description": "View the account balance, transactions, and more for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 on Blockscout.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "View the account balance, transactions, and more for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859 on Blockscout.",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout address details for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859",
  },
  "robots": "index,follow",
  "title": "Blockscout address details for 0xd789a607CEac2f0E14867de4EB15b15C9FFB5859",
}
`;

exports[`dynamic route 1`] = `
{
  "canonical": "http://localhost:3000/tx/0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193",
  "description": "Blockscout detailed transaction info. View transaction status, block confirmation, gas fee, native coin and token transfers.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "Blockscout detailed transaction info. View transaction status, block confirmation, gas fee, native coin and token transfers.",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout transaction 0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193",
  },
  "robots": "index,follow",
  "title": "Blockscout transaction 0x62d597ebcf3e8d60096dd0363bc2f0f5e2df27ba1dacd696c51aa7c9409f3193",
}
`;

exports[`static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "Browse Blockscout transactions. Track transaction status, fees, and details in real time.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "Dakota Network Blockchain Explorer for searching transactions, blocks, addresses, tokens, smart contracts, validator activity, and IPFS CIDs across the Dakota Cards ecosystem.",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout transactions - Blockscout explorer",
  },
  "robots": "index,follow",
  "title": "Blockscout transactions - Blockscout explorer",
}
`;

exports[`stats details route > enhanced data 1`] = `
{
  "canonical": "http://localhost:3000/stats/accountsGrowth",
  "description": "Cumulative account growth over time",
  "jsonLd": undefined,
  "opengraph": {
    "description": "Cumulative account growth over time",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Number of accounts chart on Blockscout",
  },
  "robots": "index,follow",
  "title": "Number of accounts chart on Blockscout",
}
`;

exports[`stats details route > no enhanced data 1`] = `
{
  "canonical": "http://localhost:3000/stats/accountsGrowth",
  "description": "Explore the accountsGrowth chart on Blockscout.",
  "jsonLd": undefined,
  "opengraph": {
    "description": "Explore the accountsGrowth chart on Blockscout.",
    "imageUrl": "http://localhost:3000/static/og_image.png",
    "title": "Blockscout stats - Accounts growth chart",
  },
  "robots": "index,follow",
  "title": "Blockscout stats - Accounts growth chart",
}
`;
